--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,4 @@ services:
     startCommand: python main.py
     envVars:
       - key: BOT_TOKEN
-        value: YOUR_TELEGRAM_BOT_TOKEN_HERE
+        value: 7864803802:AAEPld-Be4MlAKn1PReCfMFQLrfGBl60Jfg
