--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     envVars:
-      - key: BOT_TOKEN
+      - key: TOKEN
         value: 7813411435:AAEJqSjVnrfuYbYCL1E2oUexLGuur1SvQ88
